Changelog
=========


2.0.5 (unreleased)
------------------

- Add logout overlay to show all checked out documents of the current user
  Issue #1501 Warnung "Bitte Dokumente einchecken"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1501/
  
- Adjust redirecting in the checkin views, consider also documents in tasks.
  Issue #1298 Weiterleitung nach dem Bearbeiten eines Dokuments in einer Aufgabe anpassen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1298/view
  [phgross]

- Implement side-wide configuration possiblity for the preserved_as_paper field.
  Issue #1510 Neues Feld: Papierdossier vorhanden
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1510/
  [phgross]

- Added UploadValidator to avoid mail upload as documents.
  Issue #1508 Mail im Originalformat heraufladen / Zusammenhang zu #1275 und Drag und Drop
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1508/
  [phgross]

- Set the response contenttype correctly, to avoid problems with diazo themes on remote requests.
  Issue #6 Richtigen Content-Type auf der Response bei remote requests zwischen Clients setzen
  https://extranet.4teamwork.ch/intranet/08-produkte-kurse/4teamwork-gever-1/tracker-4teamwork-gever/6
  [phgross]

- Added ``Modify portal content``as needed permission for checkout a document.
  Issue #1553 Problem Auschecken von Dokument aus mandantenuebergreifender
  Aufgabe (GEA -> GDS)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1553
  [phgross]

- Removed Title accessor, because it doesn't differ from the dexterity default accessor.
  Adjust encoding of accessor values, because they changed since the dexterity update.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]
