@@ -35,13 +35,6 @@
     <!-- Register locales translations -->
     <i18n:registerTranslations directory="locales" />
 
-    <browser:page
-        name="send_documents_as_email"
-        for="plone.dexterity.interfaces.IDexterityContent"
-        class=".mailing.SendAsEmail"
-        template="templates/sendasemail.pt"
-        permission="zope2.View" />
-
     <!-- Related doucments (marker) -->
     <plone:behavior
         title="Related documents"
