@@ -1,28 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      xmlns:i18n="http://xml.zope.org/namespaces/i18n" 
-      metal:use-macro="context/main_template/macros/master">
-<body>
-
-<metal:slot metal:fill-slot="header" i18n:domain="cmf_default">
-  <h1 tal:content="view/label">View Title</h1>
-</metal:slot>
-
-<metal:slot metal:fill-slot="main" i18n:domain="cmf_default">
-    <label class="horizontal">
-        <span i18n:domain="opengever.document" i18n:translate="">attachments</span>
-    </label>
-    <br />
-    <tal:attachments repeat="attachment view/get_attachments">
-        <a tal:attributes="href attachment/absolute_url" target="_blank">
-            <img tal:attributes="src attachment/getIcon"/>
-            <span tal:content="attachment/Title"/>
-        </a><br />
-    </tal:attachments>
-    <div id="layout-contents">
-        <span tal:replace="structure view/contents" />
-    </div>
-</metal:slot>
-</body>
-</html>
